Pushing spells and abilities sections done

--- a/code_gen/codegen.py.ipynb
+++ b/code_gen/codegen.py.ipynb
@@ -469,21 +469,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"A powerful blast of magical energy. The more energy which is poured into it,\",\n",
-      "\"the more powerful it becomes\"\n",
-      "\n",
-      "\"Repeat casting this spell each turn for more damage. 1 turn = {dmg}, 2 turns =\",\n",
-      "\"{2dmg}, and 3 turns = {3dmg}.\"\n",
-      "\n",
-      "\"Must use mana each turn this spell is repeated; however it is still considered\",\n",
-      "\"the same spell.\"\n",
+      "\"Summoning spells allow the caster to conjure powerful allies both to protect\",\n",
+      "\"themselves as well as to turn the tide of battle in cases where they themselves\",\n",
+      "\"or their party are overwhelmed. Summoned entities are controlled by the entity\",\n",
+      "\"who summoned them. In the event an NPC summons an entity; both the NPC and the\",\n",
+      "\"summoned entity are controlled by the DM. When a summoned entity dies; they\",\n",
+      "\"leave behind no corpse or items. Of course, as with all things in the system;\",\n",
+      "\"the DM has the power to change this.\"\n",
       "\n"
      ]
     }
@@ -492,16 +491,13 @@
     "import re\n",
     "inputs = [\n",
     "\"\"\"\n",
-    "A powerful blast of magical energy. The more energy which is poured into it, the\n",
-    "more powerful it becomes\n",
-    "\"\"\",\n",
-    "\"\"\"\n",
-    "Repeat casting this spell each turn for more damage. 1 turn = {dmg}, 2 turns =\n",
-    "{2dmg}, and 3 turns = {3dmg}.\n",
-    "\"\"\",\n",
-    "\"\"\"\n",
-    "Must use mana each turn this spell is repeated; however it is still considered\n",
-    "the same spell.\n",
+    "Summoning spells allow the caster to conjure powerful allies both to protect\n",
+    "themselves as well as to turn the tide of battle in cases where they themselves\n",
+    "or their party are overwhelmed. Summoned entities are controlled by the entity\n",
+    "who summoned them. In the event an NPC summons an entity; both the NPC and the\n",
+    "summoned entity are controlled by the DM. When a summoned entity dies; they\n",
+    "leave behind no corpse or items. Of course, as with all things in the system;\n",
+    "the DM has the power to change this.\n",
     "\"\"\"\n",
     "]\n",
     "\n",
@@ -517,6 +513,150 @@
     "        line+=f'{word} '\n",
     "    print(f'\"{line[:-1]}\"')\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate Spell json\n",
+    "Generates a json entry for a spell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"name\":\"Summon Shogoth\",\n",
+      "    \"description\":[\n",
+      "        \"The caster calls out for help from an alternate dimension.\"\n",
+      "    ],\n",
+      "    \"element\":\"dark\",\n",
+      "    \"max-level\":2,\n",
+      "    \"mp-cost-pl\":4,\n",
+      "    \"req-stat\":[\n",
+      "        \"INT 1\",\n",
+      "        \"INT 3\"\n",
+      "    ],\n",
+      "    \"effects\":{\n",
+      "        \"tags\":[\n",
+      "            {\"effect\":\"whose horrible visage casts fear on target entity\"},\n",
+      "            {\"effect\":\"to fight alongside the user\"},\n",
+      "        ],\n",
+      "        \"description\":[\n",
+      "            \"User summons a shogoth from an alternate dimension {effect}\"\n",
+      "        ]\n",
+      "    },\n",
+      "    \"notes\":[\n",
+      "        \"Summoned entities drop nothing when killed. Entity is summoned adjacent to\",\n",
+      "        \"caster. Summoner controls actions for summoned entity. Summoned entity rolls\",\n",
+      "        \"initiative immediately when summoned.\"\n",
+      "    ]\n",
+      "},\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def generate_text_block(ind_level, text):\n",
+    "    inp = re.sub(r'[\\ \\n]+',' ',text)\n",
+    "    line = \"\"\n",
+    "    indent = '    '*ind_level\n",
+    "    output = \"\"\n",
+    "    line=\"\"\n",
+    "    inp = inp.strip()\n",
+    "    for word in inp.split(' '):\n",
+    "        if (len(line) + len(word) + 1) > 80:\n",
+    "            output += f'{indent}\"{line[:-1]}\",\\n'\n",
+    "            line=\"\"\n",
+    "        line+=f'{word} '\n",
+    "    output += f'{indent}\"{line[:-1].strip()}\"'\n",
+    "    return output\n",
+    "\n",
+    "def print_spell(spell):\n",
+    "    ob='{'\n",
+    "    cb='}'\n",
+    "    indent='    '\n",
+    "    print('{')\n",
+    "    print(f'{indent}\"name\":\"{spell[\"name\"]}\",')\n",
+    "    print(f'{indent}\"description\":[')\n",
+    "    desc = generate_text_block(2, spell['description'])\n",
+    "    if len(desc.strip(' \"')):\n",
+    "        print(desc)\n",
+    "    print(f'{indent}],')\n",
+    "    print(f'{indent}\"element\":\"{spell[\"element\"]}\",')\n",
+    "    print(f'{indent}\"max-level\":{spell[\"max-level\"]},')\n",
+    "    print(f'{indent}\"mp-cost-pl\":{spell[\"mp-cost-pl\"]},')\n",
+    "    print(f'{indent}\"req-stat\":[')\n",
+    "\n",
+    "    # Print out required stats\n",
+    "    if len(spell['req-stat']):\n",
+    "        stat_str = \"\"\n",
+    "        for stat in spell['req-stat']:\n",
+    "            stat_str += f'{indent*2}\"{stat}\",\\n'\n",
+    "        stat_str = f'{stat_str[:-2]}'\n",
+    "        print(stat_str)\n",
+    "\n",
+    "    print(f'{indent}],')\n",
+    "    print(f'{indent}\"effects\":{ob}')\n",
+    "    print(f'{indent*2}\"tags\":[')\n",
+    "\n",
+    "    # print out tags\n",
+    "    if len(spell['effects']['tags']):\n",
+    "        tag_str = ''\n",
+    "        for tag in spell['effects']['tags']:\n",
+    "            tag_str += f'{indent*3}{ob}'\n",
+    "            for key in tag:\n",
+    "                val = isinstance(tag[key],str) and f'\"{tag[key]}\"' or f'{tag[key]}'\n",
+    "                tag_str+= f'\"{key}\":{val}, '\n",
+    "            tag_str = f'{tag_str[:-2]}{cb},\\n'\n",
+    "        tag_str = f'{tag_str[:-1]}'\n",
+    "        print(tag_str)\n",
+    "\n",
+    "    print(f'{indent*2}],')\n",
+    "    print(f'{indent*2}\"description\":[')\n",
+    "    desc = generate_text_block(3, spell['effects']['description'])\n",
+    "    if len(desc.strip(' \"')):\n",
+    "        print(desc)\n",
+    "    print(f'{indent*2}]')\n",
+    "    print(f'{indent}{cb},')\n",
+    "    print(f'{indent}\"notes\":[')\n",
+    "    desc = generate_text_block(2, spell['notes'])\n",
+    "    if len(desc.strip(' \"')):\n",
+    "        print(desc)\n",
+    "    print(f'{indent}]')\n",
+    "    print('},')\n",
+    "    \n",
+    "print_spell({\n",
+    "    \"name\":\"Summon Shogoth\",\n",
+    "    \"description\":\"\"\"\n",
+    "    The caster calls out for help from an alternate dimension.\n",
+    "    \"\"\",\n",
+    "    \"element\":\"dark\",\n",
+    "    \"max-level\":2,\n",
+    "    \"mp-cost-pl\":4,\n",
+    "    \"req-stat\":['INT 1','INT 3'],\n",
+    "    \"effects\":{\n",
+    "        \"tags\":[\n",
+    "            {'effect':'whose horrible visage casts fear on target entity'},\n",
+    "            {'effect':'to fight alongside the user'}\n",
+    "        ],\n",
+    "        \"description\":\"\"\"\n",
+    "        User summons a shogoth from an alternate dimension {effect}\n",
+    "        \"\"\"\n",
+    "    },\n",
+    "    \"notes\":\"\"\"\n",
+    "    Summoned entities drop nothing when killed. Entity is summoned adjacent to caster.\n",
+    "    Summoner controls actions for summoned entity. Summoned entity rolls initiative\n",
+    "    immediately when summoned.\n",
+    "    \"\"\"\n",
+    "})"
    ]
   },
   {
